syntax = "proto3";
package grpc;
//./表示go 文件生成的路径 user表示包名
option go_package = "./pb;hellopb";

message HelloRequest {
    string name=1;
    int32 age =2;
}

message HelloResponse {
    string reply = 1;
    string second_name=2;
}

service HelloService {
    //方法
    rpc sayHello(HelloRequest) returns(HelloResponse);
}